# mdcompress

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  build_release.py  mdcompress.sln  refresh.mk
.github/workflows/: ci.yml  release-table.yml  update_release_table.py
examples/: run.sh
examples/data/: example.desc  example.tpr
libs/: prebuild.bat
libs/libxdrfile/: xdrfile.c  xdrfile.h
python/: CMakeLists.txt  test-run.sh
python/src/: compile.sh  example.py  python_bind.cpp
rust_mdc/: Cargo.toml  build.rs
rust_mdc/src/: lib.rs  mdc_sys.rs  rust_mdc.rs
src/API_verifier/: API_verifier.vcxproj  API_verifier.vcxproj.filters  main.cpp
src/_prebuild/: _prebuild.vcxproj
src/app/: application.cpp  application.h  defs.h  desc_builder.cpp  desc_builder.h  engine_compression.cpp  engine_compression.h  input_reader.h  main.cpp  mdc_compress.cpp  mdc_compress.h  mdcompress.vcxproj  mdcompress.vcxproj.filters  output_writer.h  params.h  traj_reader.h  xtc_reader.h  xtc_writer.h
src/c_mdc_reader_example/: c_mdc_reader_example.vcxproj  main.c
src/common/: engine.h  engine_decompression.cpp  engine_decompression.h  frame.h  mdc_abstract.h  mdc_decompress.cpp  mdc_decompress.h  mdc_file_version.h  serializer.cpp  serializer.h  utils.h  vec3d.h  version.h
src/cpp_mdc_reader_example/: cpp_mdc_reader_example.vcxproj  main.cpp
src/mdc_lib/: mdc_lib.vcxproj  mdc_lib.vcxproj.filters  mdc_reader.cpp  mdc_reader.h
src/python_mdc_reader_example/: main.py
src/rust_mdc_reader_example/: Cargo.toml
tests/: test_1.py
wasm/: build.sh
wasm/src/: wasm_bind.cpp
(+19 files in other folders)
